--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="edu.floridapoly.mobiledeviceapplications.fall22.triviachance">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="edu.floridapoly.mobiledeviceapplications.fall22.triviachance">
 
     <application
-            android:allowBackup="true"
-            android:dataExtractionRules="@xml/data_extraction_rules"
-            android:fullBackupContent="@xml/backup_rules"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.TriviaChance"
-            tools:targetApi="31">
+        android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.TriviaChance"
+        tools:targetApi="31">
         <activity
-                android:name=".MainMenu"
-                android:exported="true">
+            android:name=".QuestionActivity"
+            android:exported="false"
+            android:parentActivityName=".MainMenu"/>
+        <activity
+            android:name=".InventoryActivity"
+            android:exported="false"
+            android:parentActivityName=".MainMenu" />
+        <activity
+            android:name=".MainMenu"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
