--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,10 +3,25 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
+repositories {
+    google()
+    mavenCentral()
+
+    maven {
+        url "https://maven.pkg.github.com/dessie0/dessielib"
+        credentials {
+            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
+            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+        }
+    }
 }
 
 dependencies {
+    implementation project(":api")
     implementation 'com.google.code.gson:gson:2.9.1'
+    implementation 'me.dessie.dessielib.storage-api:standalone:1.3.4'
 }
