--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,25 +18,31 @@
         tools:targetApi="31">
         <activity
             android:name=".ResultsActivity"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:parentActivityName=".MainMenu"/>
         <activity
             android:name=".RedeemActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".SettingsActivity"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:parentActivityName=".MainMenu" />
         <activity
             android:name=".QuestionActivity"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:parentActivityName=".MainMenu" />
         <activity
             android:name=".InventoryActivity"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:parentActivityName=".MainMenu" />
         <activity
             android:name=".MainMenu"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
