--- a/server/build.gradle
+++ b/server/build.gradle
@@ -22,7 +22,8 @@ repositories {
 
 dependencies {
     implementation project(":api")
-    implementation 'com.google.code.gson:gson:2.9.1'
+    implementation 'com.google.code.gson:gson:2.10'
+    //api 'com.android.volley:volley:1.2.1'
 
     implementation 'me.dessie.dessielib.storage-api:standalone:1.3.4'
     annotationProcessor 'me.dessie.dessielib:annotations:1.3.4'
@@ -36,6 +37,6 @@ jar {
 
 build.dependsOn {
     shadowJar {
-        archiveFileName = "${project.name}-${project.version}.jar"
+        archiveFileName = "trivia-chance-server.jar"
     }
 }
