--- a/server/build.gradle
+++ b/server/build.gradle
@@ -23,7 +23,7 @@ repositories {
 dependencies {
     implementation project(":api")
     implementation 'com.google.code.gson:gson:2.10'
-    //api 'com.android.volley:volley:1.2.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 
     implementation 'me.dessie.dessielib.storage-api:standalone:1.3.4'
     annotationProcessor 'me.dessie.dessielib:annotations:1.3.4'
