--- a/server/build.gradle
+++ b/server/build.gradle
@@ -4,8 +4,8 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_16
-    targetCompatibility = JavaVersion.VERSION_16
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 repositories {
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 
     implementation 'me.dessie.dessielib.storage-api:standalone:1.3.4'
+    implementation files('..\\lib\\libs\\dessielib-1.3.4-all.jar')
     annotationProcessor 'me.dessie.dessielib:annotations:1.3.4'
 }
 
