--- a/server/build.gradle
+++ b/server/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'org.java-websocket:Java-WebSocket:1.5.3'
+
+    implementation 'me.dessie.dessielib.storage-api:standalone:1.3.4'
 }
 
 jar {
